# data_collection_bot

./: .gitignore  README.md  bot.py  pyproject.toml  test.xlsx
data_handler/: database.py  xls_handler.py
