[tool.poetry]
name = "data-collection-bot"
version = "0.1.0"
description = ""
authors = ["Sumchatyj"]
readme = "README.md"
packages = [{include = "data_collection_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.0a4"
lxml = "^4.9.1"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
